* Wed Nov 29 2023 Virus2500 <_________@gmail.com> - 7.9.0
- add domain option ldap_user_search_filter

* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 7.8.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 7.7.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Thu Aug 31 2023 Steven Pritchard <steve@sicura.us> - 7.6.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.5.0
- Add RockyLinux 8 support

* Thu Aug 25 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.4.2
  - Fixed:
    - Made the `ldap_uri` parameter optional

* Fri Jul 15 2022 Mark Fitch <mark.fitch1@hotmail.com> - 7.4.1
  - Fixed:
    - Added missing parameters `ldap_user_extra_attrs` and
      `ldap_user_ssh_public_key` to allow SSH keys to be fetched from AD

* Wed Jun 22 2022 Yehuda Katz <ykatz@cs.umd.edu> - 7.4.1
- Allow `krb5_server` to be optional as implemented in the template

* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.4.0
- Update from camptocamp/systemd to puppet/systemd

* Thu May 26 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.3.0
- Changed:
  - Made provider parameters Optional to support certain AD/realmd configurations:
     - sssd::provider::krb5::krb5_server
     - sssd::provider::ldap::ldap_search_base
     - sssd::provider::ldap::ldap_default_bind_dn
- Fixed:
  - nil? bug in template for ad provider

* Fri Aug 27 2021 Henry Pauli <henry+spam@mixict.nl> - 7.2.0
- Add an option in sssd::install to not install sssd client.
  This aids in better compatibility with non RedHat based systems
  where the ssssd-client package may not exists.

* Thu Aug 05 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.1.1
- Add an override for sssd-sudo.service to start it as root:root. This aligns