@@ -11,6 +11,7 @@
     'ldap_default_bind_dn',
     'ldap_default_authtok_type',
     'ldap_default_authtok',
+    'ldap_user_cert',
     'ldap_user_object_class',
     'ldap_user_name',
     'ldap_user_uid_number',
